# MD-Project

./: Crop-image.ipynb  README.md  pyproject.toml  requirement.txt
master_degree/: Mnist.ipynb  Pre-Processing.ipynb  Processing-tesseract.ipynb  draft-Pre-processing.ipynb  numpy_test.ipynb
master_degree/.ipynb_checkpoints/: Pre-Processing-checkpoint.ipynb  numpy_test-checkpoint.ipynb
