[tool.poetry]
name = "master-degree"
version = "0.1.0"
description = ""
authors = ["nkietwee <nawaporn.kiet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
notebook = "^7.2.2"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
